--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "styled-components": "^6.1.8"
+    "react-slick": "^0.30.2",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
