--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swiper": "^11.0.6"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
