--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6"
