--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6"
   },
