--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
